fixed：select组件新增inputClass、inputStyle、placeholder属性

--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -58,13 +58,11 @@
       
     &:not(.is-disabled):hover {
       border-color: var(--y-input-hover-border-color);
-      border-inline-end-width: 1px; 
     }
 
     &.is-focus {
       border-color: var(--y-input-focus-border-color);
       box-shadow: 0 0 0 2px var(--y-input-focus-shadow-color);
-      border-inline-end-width: 1px;
     }
   }
 
@@ -118,7 +116,7 @@
   }
 }
 
-@keyframes j-shake-enter {
+@keyframes y-shake-enter {
   0%, 100% {
     right: 0;
   }
@@ -133,5 +131,5 @@
 }
 
 .y-input-shake-enter-active {
-  animation: j-shake-enter 0.2s;
+  animation: y-shake-enter 0.2s;
 }
