--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -4,14 +4,17 @@
 $box-shadow-secondary: 0 6px 16px 0 rgb(0 0 0 / 8%),
   0 3px 6px -4px rgb(0 0 0 / 12%),
   0 9px 28px 8px rgb(0 0 0 / 5%);
-$sm: 768px !default;
-$md: 992px !default;
-$lg: 1200px !default;
-$xl: 1920px !default;
+$xs: 576px !default;
+$sm: 576px !default;
+$md: 768px !default;
+$lg: 992px !default;
+$xl: 1200px !default;
+$xxl: 1600px !default;
 $breakpoints: (
   'xs': '(max-width: #{$sm})',
   'sm': '(min-width: #{$sm})',
   'md': '(min-width: #{$md})',
   'lg': '(min-width: #{$lg})',
   'xl': '(min-width: #{$xl})',
+  'xxl': '(min-width: #{$xxl})',
 ) !default;
