--- a/packages/theme/src/dropdown.scss
+++ b/packages/theme/src/dropdown.scss
@@ -4,10 +4,8 @@
 @use "./common/var.scss" as *;
 
 @include b(dropdown) {
-  --y-dropdown-bg-color: var(--y-color-bg-elevated);
-
-  background-color: var(--y-dropdown-bg-color);
-  box-shadow: $box-shadow-secondary;
+  padding: 0;
+  background-color: transparent;
   color: var(--y-pop-confirm-text-color);
 
   @include e(title) {
@@ -16,24 +14,25 @@
     color: var(--y-color-text);
     font-size: var(--y-font-size);
   }
+}
 
-  @include e(menus) {
-    padding: 0;
-    margin: 0;
-    max-height: 240px;  
-  }
+@include b(dropdown-menu) {
+  --y-dropdown-bg-color: var(--y-color-bg-elevated);
+  --y-hover-text-color: var(--y-color-primary);
+  --y-hover-bg-color: var(--y-color-primary-3);
 
-  @include e(menu) {
-    --y-hover-text-color: var(--y-color-primary);
-    --y-hover-bg-color: var(--y-color-primary-3);
+  box-shadow: $box-shadow-secondary;
+  background-color: var(--y-dropdown-bg-color);
+  border-radius: 3px;
+  max-height: 240px;
+}
 
-    padding: 5px 12px;
-    list-style: none;
-    cursor: pointer;
+@include b(dropdown-option) {
+  padding: 5px 12px;list-style: none;
+  cursor: pointer;
 
-    &:hover {
-      color: var(--y-hover-text-color);
-      background-color: var(--y-hover-bg-color);
-    }
+  &:hover {
+    color: var(--y-hover-text-color);
+    background-color: var(--y-hover-bg-color);
   }
 }
