--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -99,12 +99,12 @@
 
   @include e(clear) {
     border-radius: 50%;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     background-color: var(--y-input-clear);
     cursor: pointer;
 
-    @include utils-close-icon(1px);
+    @include utils-close-icon(1px, var(--y-color-text), 50%);
   }
 
   @include e(password) {
