--- a/packages/theme/src/space.scss
+++ b/packages/theme/src/space.scss
@@ -1,4 +1,5 @@
 @use "./mixins/mixins.scss" as *;
+@use "./mixins/config.scss" as *;
 
 @include b(space) {
   display: flex;
@@ -14,5 +15,24 @@
 
   @include when(vertical) {
     flex-direction: column;
+  }
+
+  @include when(compact) {
+    .#{$b + $element-separator + 'item'} {
+      &:not(.is-last) {
+        border-start-end-radius: 0;
+        border-end-end-radius: 0;
+        margin-inline-end: -1px;
+      }
+
+      &:not(.is-first) {
+        border-start-start-radius: 0;
+        border-end-start-radius: 0;
+      }
+      
+      &:hover {
+        z-index: 10;
+      }
+    }
   }
 }
