fixed：修改input组件初始化textarea，rows错误问题

--- a/packages/theme/src/space.scss
+++ b/packages/theme/src/space.scss
@@ -33,6 +33,11 @@
       &:hover {
         z-index: 10;
       }
+
+      &.is-focus {
+        z-index: 10;
+        box-shadow: none;
+      }
     }
   }
 }
